# bf1942-portal-conversion

./: .gitignore  AXIS_VEHICLE_COMPLETE_INVENTORY.md  CONTRIBUTING.md  DRY_ACTION_PLAN.md  PROJECT_PLAN.md  README.html  README.md  SOLUTIONS_SUMMARY.md  TESTING.md  Test_Coverage_Plan.md  Testing_Guide.md  maps_registry.json  package.json  pyproject.toml  requirements.txt  sdk.version.json  tsconfig.json
.claude/: BF6_Asset_Catalog_Kursk.md  CLAUDE.md  Coordinate_Offset_Fix.md  Godot_MCP_Setup.md  Kursk_Analysis.md  Kursk_Authenticity_Report.md  Multi_Era_Support.md  Phase1_Analysis.md  Phase3_Complete.md  claude.md  macOS_Compatibility_Patch.md
FbExportData/: asset_types.json  level_info.json  map_names.json
GodotProject/: project.godot
asset_audit/: Portal_Asset_Catalog.md  portal_asset_index.json
docs/: Portal_Export_Guide.md  README.md  STYLE_GUIDE.md  Style_Guide.md
python/: LICENSE.txt
sdk_reference/: STYLE_CHANGES.md  index.html
tools/: AAA_COMPLIANCE_AUDIT.md  ALLIED_VEHICLES_COMPLETE_LIST.md  README.md  README_CLI.md  add_hq_areas.py  add_missing_kursk_mappings.py  add_missing_spawners.py  adjust_height.py  adjust_spawn_heights.py  analyze_asset_coverage.py  analyze_bf6_assets.py  analyze_portal_assets.py  apply_axis_transform.py  apply_coordinate_offset.py  audit_bf1942_assets.py  axis_vehicles_database.json  bf1942_vehicle_categories.md  bf1942_vehicle_scan_results.json  bf6_assets_by_category.json  clean_audit.md  cleanup_technical_objects.py  compare_terrains.py  complete_asset_analysis.py  complete_maps_section.html  convert_bf1942_heightmap.py  convert_bf1942_map.sh  coordinate_transform.py  create_asset_mappings.py  create_clean_terrain.md  create_experience.py  create_multi_map_experience.py  export_map.sh  export_to_portal.py  filter_real_assets.py  final_mapping_pass.py  fix_authentic_spawn_counts.py  fix_spatial_terrain.py  fix_spawn_points.py  (+37 more)
(+24402 files in other folders)
